--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -26,19 +26,16 @@ jobs:
   lint:
     uses: ./.github/workflows/lint.yml
     with:
-      GO_VERSION: '1.20'
+      GO_VERSION: "1.20"
 
   test:
     uses: ./.github/workflows/test.yml
     with:
-      GO_VERSION: '1.20'
-
-  proto:
-    uses: ./.github/workflows/proto.yml
+      GO_VERSION: "1.20"
 
   # Make a release if this is a manually trigger job, i.e. workflow_dispatch
   release:
-    needs: [lint, test, proto]
+    needs: [lint, test]
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'workflow_dispatch' }}
     permissions: "write-all"
