use a setup job to set a go-version output and use throughout CI

--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -23,15 +23,27 @@ on:
           - major
 
 jobs:
+  setup:
+    runs-on: ubuntu-latest
+    env:
+      # use consistent go version throughout pipeline here
+      GO_VERSION: "1.20"
+    outputs:
+      go-version: ${{ steps.set-vars.outputs.go-version }}
+    steps:
+      - name: Set go version
+        id: set-vars
+        run: echo "go-version=${{env.GO_VERSION}}" >> "$GITHUB_OUTPUT"
+
   lint:
     uses: ./.github/workflows/lint.yml
     with:
-      GO_VERSION: "1.20"
+      go-version: ${{ needs.setup.outputs.go-version }}
 
   test:
     uses: ./.github/workflows/test.yml
     with:
-      GO_VERSION: "1.20"
+      go-version: ${{ needs.setup.outputs.go-version }}
 
   # Make a release if this is a manually trigger job, i.e. workflow_dispatch
   release:
