--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -8,6 +8,7 @@ on:
       - 'v[0-9]+\.[0-9]+\.[0-9]+'
       - 'v[0-9]+\.[0-9]+\.[0-9]+-rc(?:[0-9]+|\.[0-9]+)'
   pull_request:
+  merge_group:
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
