--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -8,6 +8,7 @@ on:
       - 'v[0-9]+\.[0-9]+\.[0-9]+'
       - 'v[0-9]+\.[0-9]+\.[0-9]+-rc(?:[0-9]+|\.[0-9]+)'
   pull_request:
+  merge_group:
   workflow_dispatch:
     # Inputs the workflow accepts.
     inputs:
@@ -26,12 +27,12 @@ jobs:
   lint:
     uses: ./.github/workflows/lint.yml
     with:
-      GO_VERSION: "1.20"
+      GO_VERSION: "1.21"
 
   test:
     uses: ./.github/workflows/test.yml
     with:
-      GO_VERSION: "1.20"
+      GO_VERSION: "1.21"
 
   # Make a release if this is a manually trigger job, i.e. workflow_dispatch
   release:
