--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -24,6 +24,12 @@ on:
           - major
 
 jobs:
+  # TODO: Uncomment once test is available in released node.
+  #api-equivalence:
+    #uses: ./github/workflows/test-equivalence.yml
+    #with:
+      #GO_VERSION: "1.22"
+
   lint:
     uses: ./.github/workflows/lint.yml
     with:
