--- a/.github/workflows/test-equivalence.yml
+++ b/.github/workflows/test-equivalence.yml
@@ -24,4 +24,4 @@ jobs:
           go-version: ${{ inputs.GO_VERSION }}
 
       - name: Run Structs Equivalence Test
-        run: cd celestia-node && go test -v -tags=rpcequivalence ./api -run TestAPIEquivalence
+        run: cd celestia-node && go test -v -tags=conformance ./api -run TestAPIEquivalence
