--- a/.github/auto_request_review.yml
+++ b/.github/auto_request_review.yml
@@ -6,7 +6,8 @@ reviewers:
       - Bidon15
       - Ferret-san
       - distractedm1nd
-      - YazzyYaz
+      - jcstein
+      - ramin
     celestia:
       - Wondertan
       - S1nus
@@ -16,16 +17,17 @@ reviewers:
       - smuu
       - sysrex
       - jrmanes
+    ci:
+      - MSevey
 files:
   '**':
     - code-owners
-    - celestia
   '**/*Dockerfile':
     - devops
   '.github/**':
-    - devops
+    - ci
 options:
   ignore_draft: true
   ignored_keywords:
     - WIP
-  number_of_reviewers: 3
+  number_of_reviewers: 2
