--- a/.github/workflows/test-equivalence.yml
+++ b/.github/workflows/test-equivalence.yml
@@ -17,11 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: celestiaorg/celestia-node
+          repository: celestiaorg/node-api-conformance-test
           ref: v0.13.4
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ inputs.GO_VERSION }}
 
       - name: Run Structs Equivalence Test
-        run: cd celestia-node && go test -v -tags=conformance ./api -run TestAPIEquivalence
+        run: cd node-api-conformance-test && go test
