--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -41,7 +41,7 @@ jobs:
 
   # Make a release if this is a manually trigger job, i.e. workflow_dispatch
   release:
-    needs: [lint, test]
+    needs: [lint, test, api-equivalence]
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'workflow_dispatch' }}
     permissions: "write-all"
