--- a/.github/workflows/test-equivalence.yml
+++ b/.github/workflows/test-equivalence.yml
@@ -18,10 +18,9 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: celestiaorg/node-api-conformance-test
-          ref: v0.13.4
       - uses: actions/setup-go@v5
         with:
           go-version: ${{ inputs.GO_VERSION }}
 
       - name: Run Structs Equivalence Test
-        run: cd node-api-conformance-test && go test
+        run: go test
