--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -24,11 +24,10 @@ on:
           - major
 
 jobs:
-  # TODO: Uncomment once test is available in released node.
-  #api-equivalence:
-    #uses: ./github/workflows/test-equivalence.yml
-    #with:
-      #GO_VERSION: "1.22"
+  api-equivalence:
+    uses: ./.github/workflows/test-equivalence.yml
+    with:
+      GO_VERSION: "1.22"
 
   lint:
     uses: ./.github/workflows/lint.yml
@@ -42,7 +41,7 @@ jobs:
 
   # Make a release if this is a manually trigger job, i.e. workflow_dispatch
   release:
-    needs: [lint, test]
+    needs: [lint, test, api-equivalence]
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'workflow_dispatch' }}
     permissions: "write-all"
