--- a/.github/workflows/test-equivalence.yml
+++ b/.github/workflows/test-equivalence.yml
@@ -3,11 +3,6 @@
 name: api-equivalence
 on:
   workflow_call:
-    inputs:
-      GO_VERSION:
-        description: "Go version to use"
-        type: string
-        required: true
 
 jobs:
   api-equivalence:
@@ -18,9 +13,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           repository: celestiaorg/node-api-conformance-test
+
       - uses: actions/setup-go@v5
         with:
-          go-version: ${{ inputs.GO_VERSION }}
+          go-version-file: ./go.mod
 
       - name: Run Structs Equivalence Test
         run: go test
