--- a/.github/workflows/ci_release.yml
+++ b/.github/workflows/ci_release.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+      - ci/ramin/ci-cleanup
     # Trigger on version tags
     tags:
       - 'v[0-9]+\.[0-9]+\.[0-9]+'
