ci: general cleanup (#135)
<!--
Please read and fill out this form before submitting your PR.

Please make sure you have reviewed our contributors guide before
submitting your
first PR.
-->

## Overview

<!-- 
Please provide an explanation of the PR, including the appropriate
context,
background, goal, and rationale. If there is an issue with this
information,
please provide a tl;dr and link the issue. 
-->

- removes go-input everywhere and relies on go.mod to stay in sync
- updates versions where deprecation is warned (hopefully)
- reconciles the go.mod go version (was mismatched between toolchain and
go version during dependabot storm)
- introduces whitespace between workflow job steps for easier reading
and aesthetics

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,11 +3,6 @@
 name: lint
 on:
   workflow_call:
-    inputs:
-      GO_VERSION:
-        description: "Go version to use"
-        type: string
-        required: true
 
 jobs:
   golangci-lint:
@@ -15,11 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-go@v5
         with:
-          go-version: ${{ inputs.GO_VERSION }}
+          go-version-file: ./go.mod
         # This steps sets the GIT_DIFF environment variable to true
         # if files defined in PATTERS changed
+
       - uses: technote-space/get-diff-action@v6.1.2
         with:
           # This job will pass without running if go.mod, go.sum, and *.go
@@ -40,10 +37,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: celestiaorg/.github/.github/actions/yamllint@v0.4.3
 
   markdown-lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: celestiaorg/.github/.github/actions/markdown-lint@v0.4.3
