--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,11 +3,6 @@
 name: Tests / Code Coverage
 on:
   workflow_call:
-    inputs:
-      GO_VERSION:
-        description: 'Go version to use'
-        type: string
-        required: true
 
 jobs:
   go_mod_tidy_check:
@@ -15,10 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-go@v5
         with:
-          go-version: ${{ inputs.GO_VERSION }}
+          go-version-file: ./go.mod
+
       - run: go mod tidy
+
       - name: check for diff
         run: git diff --exit-code
 
@@ -27,14 +25,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: set up go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ inputs.GO_VERSION }}
+          go-version-file: ./go.mod
+
       - name: Test & Coverage
         run: make cover
+
       - uses: codecov/codecov-action@v4.5.0
         with:
+          token: ${{ secrets.CODECOV_TOKEN }}
           file: ./coverage.txt
 
   unit_test:
@@ -42,10 +44,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: set up go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ inputs.GO_VERSION }}
+          go-version-file: ./go.mod
+
       - name: execute test run
         run: make test-unit
 
@@ -54,10 +58,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: set up go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ inputs.GO_VERSION }}
+          go-version-file: ./go.mod
+
       - name: execute test run
         run: make test-unit-race
 
@@ -66,9 +72,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: set up go
         uses: actions/setup-go@v5
         with:
-          go-version: ${{ inputs.GO_VERSION }}
+          go-version-file: ./go.mod
+
       - name: Integration Tests
         run: echo "No integration tests yet"
